fixing vertical stretch on mobile

--- a/style.css
+++ b/style.css
@@ -163,6 +163,8 @@ p {
     grid-auto-columns: minmax(10, 1fr);
     grid-auto-flow: column;
     gap: 0.75em;
+    max-height: 45vh;
+    overflow: clip;
 }
 .gallery-spread > .entry > img {
     height: 100%;
